--- a/SPT/0_2016/conspiracyTheories/sass/styles.scss
+++ b/SPT/0_2016/conspiracyTheories/sass/styles.scss
@@ -7,6 +7,20 @@ h1
 	font-size: $headingFontSize;
 }
 
+h3
+{
+	font-family: $fontStack;
+	font-size: $headingFontSize / 3;
+	text-align: center;
+}
+
+.containerCenter
+{
+	align-items: center;
+	justify-content: center;
+	flex: 1;
+}
+
 img
 {
 	max-width: 100vw;
